--- a/firebase/hosting/user/perfumary/perfumary.html
+++ b/firebase/hosting/user/perfumary/perfumary.html
@@ -12,10 +12,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <title>Welcome to your Blue Sports!</title>
+    <title>Welcome to your Blue Perfumery!</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
-
+<h1>prueba perfumeria</h1>
+<img src="../images/logo_store.png" alt="logo">
+<img src="../images/logo_completo_store.png" alt="logo">
 </body>
 </html>
