añadir animaciones a prinblue y cambios de animacion en la bottombar. cambiamos los nombres de las zonas.

--- a/firebase/hosting/user/jewelry/jewelry.html
+++ b/firebase/hosting/user/jewelry/jewelry.html
@@ -62,6 +62,6 @@
 </nav>
 <h1>prueba joyeria</h1>
 <img src="../images/logo_store.png" alt="logo">
-<img src="../images/logo_completo_store.png" alt="logo">
+<img src="../../../../assets/logo_completo_store.png" alt="logo">
 </body>
 </html>
