--- a/firebase/hosting/user/perfumary/perfumary.html
+++ b/firebase/hosting/user/perfumary/perfumary.html
@@ -18,6 +18,6 @@
 <body>
 <h1>prueba perfumeria</h1>
 <img src="../images/logo_store.png" alt="logo">
-<img src="../../../../assets/logo_completo_store.png" alt="logo">
+<img src="../images/logo_completo_store.png" alt="logo">
 </body>
 </html>
