--- a/firebase/hosting/user/sports/sports.html
+++ b/firebase/hosting/user/sports/sports.html
@@ -17,5 +17,65 @@
 </head>
 <body>
 <h1>sports</h1>
+
+<div id="container-sm">
+    <div id="images" class="carousel slide carousel-fade h-25" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#images" data-slide-to="0" class="active"></li>
+            <li data-target="#images" data-slide-to="1"></li>
+            <li data-target="#images" data-slide-to="2"></li>
+            <li data-target="#images" data-slide-to="3"></li>
+            <li data-target="#images" data-slide-to="4"></li>
+        </ul>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="img-fluid d-block w-100"src="./images/store_sports.png" alt="pareja1">
+                <div class="bg-dark carousel-caption d-none d-md-block">
+                    <span>Haz planes únicos.</span>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid d-block w-100"src="./images/store_sports.png" alt="pareja2">
+                <div class="bg-dark carousel-caption d-none d-md-block">
+                    <span>Saca tu lado más romántico.</span>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid d-block w-100"src="../images/store_sports.png" alt="pareja3">
+                <div class="bg-dark carousel-caption d-none d-md-block">
+                    <span>Emociónate.</span>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid d-block w-100"src="../images/store_perfumes.png" alt="pareja4">
+                <div class="bg-dark carousel-caption d-none d-md-block">
+                    <span>Sé feliz.</span>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid d-block w-100"src="images/pareja5.jpg" alt="pareja5">
+                <div class="bg-dark carousel-caption d-none d-md-block">
+                    <span>Echa a volar tu creatividad.</span>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class=" img-fluid d-block w-100"src="images/pareja6.jpg" alt="pareja6">
+                <div class="bg-dark carousel-caption d-none d-md-block ">
+                    <span>Descubre!</span>
+                </div>
+            </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#images" data-slide="prev" role="button">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </a>
+        <a class="carousel-control-next" href="#images" data-slide="next" role="button">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </a>
+
+    </div>
+</div>
+
 </body>
 </html>
