fav ads en firestore con un map y botones mg y no mg. arreglado map fav ads en user.dart

--- a/firebase/hosting/user/jewelry/jewelry.html
+++ b/firebase/hosting/user/jewelry/jewelry.html
@@ -61,6 +61,7 @@
         <li><button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modalregistro">Conéctate</button> </li> </ul>
 </nav>
 <h1>prueba joyeria</h1>
+<span> prueba span</span>
 <img src="../images/logo_store.png" alt="logo">
 <img src="../images/logo_completo_store.png" alt="logo">
 </body>
