--- a/firebase/hosting/user/sports/sports.html
+++ b/firebase/hosting/user/sports/sports.html
@@ -17,7 +17,6 @@
 </head>
 <body>
 <h1>sports</h1>
-
 <div id="container-sm">
     <div id="images" class="carousel slide carousel-fade h-25" data-ride="carousel">
         <ul class="carousel-indicators">
@@ -30,39 +29,39 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="img-fluid d-block w-100"src="./images/store_sports.png" alt="pareja1">
+                <img class="img-fluid d-block w-100"src="../sports/images/sports3.jpg" alt="pareja1">
                 <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Haz planes únicos.</span>
+                    <span>Sport 1</span>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="./images/store_sports.png" alt="pareja2">
+                <img class="img-fluid d-block w-100"src="../sports/images/sports2.jpg" alt="pareja2">
                 <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Saca tu lado más romántico.</span>
+                    <span>Sport 2</span>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="../images/store_sports.png" alt="pareja3">
+                <img class="img-fluid d-block w-100"src="../sports/images/sports1.jpg" alt="pareja3">
                 <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Emociónate.</span>
+                    <span>Sport 3</span>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="../images/store_perfumes.png" alt="pareja4">
+                <img class="img-fluid d-block w-100"src="../sports/images/sports3.jpg" alt="pareja4">
                 <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Sé feliz.</span>
+                    <span>Sport 4</span>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="images/pareja5.jpg" alt="pareja5">
+                <img class="img-fluid d-block w-100"src="../sports/images/sports5.jpg" alt="pareja5">
                 <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Echa a volar tu creatividad.</span>
+                    <span  style="color:red">Sport 5</span>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class=" img-fluid d-block w-100"src="images/pareja6.jpg" alt="pareja6">
+                <img class=" img-fluid d-block w-100"src="../sports/images/sports6.jpg" alt="pareja6">
                 <div class="bg-dark carousel-caption d-none d-md-block ">
-                    <span>Descubre!</span>
+                    <span  style="color:red">Sport 6</span>
                 </div>
             </div>
         </div>
