--- a/firebase/hosting/user/jewelry/jewelry.html
+++ b/firebase/hosting/user/jewelry/jewelry.html
@@ -15,54 +15,18 @@
     <title>Welcome to your Blue Jewelry!</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-    <a class="navbar-brand" href="#"><img src="../favicon.png" alt="logo" style="width:40px;"></a>
+<body>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_trawmi6s.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mhkrcuxr.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navegador">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse justify-content-center" id="navegador">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown mr-5">
-                <a class="nav-link dropdown-toggle" href="#Inicio" id="iniciodrop" data-toggle="dropdown">
-                    Inicio
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#inicio1">¿Por qué Netic?</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#inicio2">¿Cómo funciona?</a>
-                </div>
-            </li>
-            <li class="nav-item mr-5">
-                <a class="nav-link" href="#gentecerca">Gente cerca de mí</a>
-            </li>
-            <li class="nav-item mr-5">
-                <a class="nav-link" href="#testimonios">Testimonios</a>
-            </li>
-            <li class="nav-item dropdown mr-5">
-                <a class="nav-link dropdown-toggle" href="#sobrenosotros" id="contactodrop" data-toggle="dropdown">
-                    Sobre nosotros
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#contacto1">Ayuda</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#contacto2">Privacidad</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#contacto3">Contacto</a>
 
-                </div>
-            </li>
-        </ul>
+<div class="container">
+    <div class="embed-responsive embed-responsive-16by9">
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="../jewelry/assets/jewelry.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
     </div>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="registro.jsp" class="btn btn-warning mr-2" role="button">Regístrate</a></li>
-        <li><button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modalregistro">Conéctate</button> </li> </ul>
-</nav>
-<h1>prueba joyeria</h1>
-<span> prueba span</span>
-<img src="../images/logo_store.png" alt="logo">
-<img src="../images/logo_completo_store.png" alt="logo">
+</div>
 </body>
+
 </html>
