--- a/firebase/hosting/user/myblueadstore.html
+++ b/firebase/hosting/user/myblueadstore.html
@@ -14,15 +14,31 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>Welcome to myBlueStore!!</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
   </head>
   <body>
+  	<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_trawmi6s.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mhkrcuxr.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
+
+
+<div class="container">
+    <div class="embed-responsive embed-responsive-16by9">
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="assets/welcome.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
+    </div>
+</div>
   <div class="pt-4 bg-warning">I only have a top padding (1.5rem = 24px)</div>
   <div class="p-5 bg-success">I have a padding on all sides (3rem = 48px)</div>
   <div class="m-5 pb-5 bg-info">I have a margin on all sides (3rem = 48px) and a bottom padding (3rem = 48px)</div>
   <div class="container">
     <div class="embed-responsive embed-responsive-16by9">
       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    </div>
+  </div>
+   <div class="container">
+    <div class="embed-responsive embed-responsive-16by9">
+      <video class="embed-responsive-item" src="assets/welcome.mp4"></video>
     </div>
   </div>
   <div class="d-flex bg-secondary">
