--- a/firebase/hosting/user/sports/sports.html
+++ b/firebase/hosting/user/sports/sports.html
@@ -13,66 +13,18 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>Welcome to your Blue Sports!</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
 </head>
 <body>
-<h1>sports</h1>
-<div id="container-sm">
-    <div id="images" class="carousel slide carousel-fade h-25" data-ride="carousel">
-        <ul class="carousel-indicators">
-            <li data-target="#images" data-slide-to="0" class="active"></li>
-            <li data-target="#images" data-slide-to="1"></li>
-            <li data-target="#images" data-slide-to="2"></li>
-            <li data-target="#images" data-slide-to="3"></li>
-            <li data-target="#images" data-slide-to="4"></li>
-        </ul>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_trawmi6s.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mhkrcuxr.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
 
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="img-fluid d-block w-100"src="../sports/images/sports3.jpg" alt="pareja1">
-                <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Sport 1</span>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="../sports/images/sports2.jpg" alt="pareja2">
-                <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Sport 2</span>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="../sports/images/sports1.jpg" alt="pareja3">
-                <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Sport 3</span>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="../sports/images/sports3.jpg" alt="pareja4">
-                <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span>Sport 4</span>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid d-block w-100"src="../sports/images/sports5.jpg" alt="pareja5">
-                <div class="bg-dark carousel-caption d-none d-md-block">
-                    <span  style="color:red">Sport 5</span>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class=" img-fluid d-block w-100"src="../sports/images/sports6.jpg" alt="pareja6">
-                <div class="bg-dark carousel-caption d-none d-md-block ">
-                    <span  style="color:red">Sport 6</span>
-                </div>
-            </div>
-        </div>
 
-        <a class="carousel-control-prev" href="#images" data-slide="prev" role="button">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </a>
-        <a class="carousel-control-next" href="#images" data-slide="next" role="button">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </a>
-
+<div class="container">
+    <div class="embed-responsive embed-responsive-16by9">
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="../sports/assets/sports.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
     </div>
 </div>
 
