--- a/firebase/hosting/user/sports/sports.html
+++ b/firebase/hosting/user/sports/sports.html
@@ -24,7 +24,7 @@
 
 <div class="container">
     <div class="embed-responsive embed-responsive-16by9">
-        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="../sports/assets/sports.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls poster= "https://placeholder.com" tabindex="0"><source src="../sports/assets/sports.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'></video>
     </div>
 </div>
 
