--- a/firebase/hosting/user/perfumery/perfumery.html
+++ b/firebase/hosting/user/perfumery/perfumery.html
@@ -21,10 +21,10 @@
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mhkrcuxr.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
 
-
+<span>perfumery</span>
 <div class="container">
     <div class="embed-responsive embed-responsive-16by9">
-        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="../perfumery/assets/perfumery.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="../shoes/assets/shoes.mp4#t=1" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
     </div>
 </div>
 </body>
