--- a/firebase/hosting/user/jewelry/jewelry.html
+++ b/firebase/hosting/user/jewelry/jewelry.html
@@ -14,19 +14,25 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>Welcome to your Blue Jewelry!</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link href="../jewelry/estilo.css" rel=StyleSheet type="text/css">
 </head>
-<body>
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_trawmi6s.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mhkrcuxr.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
-
-
-<div class="container">
+<body style=" text-align: center;
+    background-image: url(../jewelry/assets/jewel4.jpg);
+    opacity:0.8;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;">
+<div class="container-sm">
+    <h1 class="mt-5"style="font-family: 'Helvetica'; color: grey">Welcome to myBlueJewelry</h1>
+    <h3 style="font-family: 'Helvetica'; color: salmon">50% special offer in rings & earrings!</h3>
     <div class="embed-responsive embed-responsive-16by9">
-        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="../jewelry/assets/jewelry.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="40%" height="auto" autoplay loop poster="../jewelry/assets/jewel3.jpg"controls tabindex="0"><source src="../jewelry/assets/jewelry.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
     </div>
 </div>
+<footer class="mt-2">
+    <h3  style="font-family: 'Helvetica'; color: grey">Only available for blue users</h3>
+</footer>
+
 </body>
 
 </html>
