--- a/firebase/hosting/user/perfumery/perfumery.html
+++ b/firebase/hosting/user/perfumery/perfumery.html
@@ -15,17 +15,22 @@
     <title>Welcome to your Blue Perfumery!</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
-<body>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_trawmi6s.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mhkrcuxr.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
-
-<span>perfumery</span>
-<div class="container">
+<body style=" text-align: center;
+    background-image: url(../perfumery/assets/perfumery3.jpg);
+    opacity:0.8;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;">
+<div class="container-sm">
+    <h1 class="mt-5"style="font-family: 'Helvetica'; color: grey">Welcome to myBluePerfumery</h1>
+    <h2 style="font-family: 'Helvetica'; color: salmon">50% special offer in high perfumery brands!</h2>
     <div class="embed-responsive embed-responsive-16by9">
-        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls tabindex="0"><source src="../shoes/assets/shoes.mp4#t=1" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop poster="../perfumery/assets/perfumery.jpg" controls tabindex="0"><source src="../perfumery/assets/perfumery1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
     </div>
 </div>
+<footer class="mt-2">
+    <h3 style="font-family: 'Helvetica'; color: grey">Only available for blue users</h3>
+</footer>
+
 </body>
 </html>
