--- a/firebase/hosting/user/sports/sports.html
+++ b/firebase/hosting/user/sports/sports.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -12,21 +12,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link href="../sports/estilo.css" rel=StyleSheet type="text/css"> <!--link CSS StyleSheet-->
     <title>Welcome to your Blue Sports!</title>
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
 </head>
-<body>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_trawmi6s.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mhkrcuxr.json"  background="transparent"  speed="1"  style="width: 20px; height: 20px;" hover loop  autoplay></lottie-player>
-
-
-<div class="container">
+<body style=" text-align: center;
+    background-image: url(../sports/assets/sports4.jpg);
+    opacity:0.8;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;">
+<div class="container-sm">
+    <h1 class="mt-5"style="font-family: 'Helvetica'; color: white">Welcome to myBlueSports</h1>
+    <h2 style="font-family: 'Helvetica'; color: antiquewhite">50% special offer in sport equipment for children!</h2>
     <div class="embed-responsive embed-responsive-16by9">
-        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop controls poster= "https://placeholder.com" tabindex="0"><source src="../sports/assets/sports.mp4#t=1" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'></video>
+        <video class= "embed-responsive-item" style= "margin-left: auto;margin-right: auto; display: block "width="30%" height="auto" autoplay loop poster="../sports/assets/sports1.jpg"controls tabindex="0"><source src="../sports/assets/sports.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /></video>
     </div>
 </div>
+    <footer class="mt-2">
+        <h3 style="font-family: 'Helvetica'; color: antiquewhite">Only available for blue users</h3>
+    </footer>
 
 </body>
 </html>
